--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:keepScreenOn="true"
     tools:context=".MainActivity">
 
     <com.ivana.liscript.app.EditTextCode
@@ -18,8 +19,10 @@
         android:fontFamily="monospace"
         android:gravity="start|top"
         android:hint="@string/code_text_hint"
-        android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
         android:importantForAutofill="no"
+        android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
+        android:paddingStart="@dimen/input_text_padding"
+        android:paddingEnd="@dimen/input_text_padding"
         android:scrollbars="vertical" />
 
     <View
@@ -40,6 +43,8 @@
         android:gravity="start|top"
         android:hint="@null"
         android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
+        android:paddingStart="@dimen/input_text_padding"
+        android:paddingEnd="@dimen/input_text_padding"
         android:importantForAutofill="no"
         android:scrollbars="vertical" />
 
@@ -66,10 +71,10 @@
             android:fontFamily="monospace"
             android:gravity="start|top"
             android:hint="@string/input_text_hint"
-            android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
             android:importantForAutofill="no"
-            android:scrollbars="vertical"
-            android:padding="@dimen/input_text_padding" />
+            android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
+            android:padding="@dimen/input_text_padding"
+            android:scrollbars="vertical" />
 
         <ImageButton
             android:id="@+id/inputButton"
